k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: untappd-reborn
  labels:
    app: untappd-reborn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: untappd-reborn
  template:
    metadata:
      labels:
        app: untappd-reborn
    spec:
      containers:
        - name: web
          # 👇 À REMPLACER par l'adresse de ton registry / image
          image: REGISTRY/untappd-reborn:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
